--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@actions/artifact": "^0.5.1",
-    "@actions/core": "^1.3.0",
-    "@actions/github": "^5.0.0"
+    "@actions/artifact": "^1.1.2",
+    "@actions/core": "^1.10.1",
+    "@actions/github": "^5.1.1"
   },
   "devDependencies": {
-    "@types/node": "^12.7.12",
-    "@zeit/ncc": "^0.22.3",
+    "@types/node": "^20.6.1",
+    "@vercel/ncc": "^0.38.0",
     "js-yaml": "^4.1.0",
-    "prettier": "^2.3.0",
-    "ts-jest": "^27.0.0",
-    "typescript": "^4.2.4"
+    "prettier": "^3.0.3",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.2.2"
   }
 }
